[package]
name = "sc_drbg"
version = "0.1.0-alpha.1"
edition = "2024"
description = "Subset Counter-Based Deterministic Random Bit Generator"
readme = "README.md"
homepage = "https://github.com/jacobhaap/rs-sc_drbg"
repository = "https://gitlab.com/jacobhaap/rs-sc_drbg"
license = "MIT"
keywords = ["crypto", "drbg", "prng"]
categories = ["cryptography"]

[dependencies]
aes = "0.8.4"
ctr = "0.9.2"
digest = "0.10.7"
hkdf = "0.12.4"
hmac = "0.12.1"
rand_core = "0.9.3"
sha3 = "0.10.8"
zeroize = "1.8.2"

[dev-dependencies]
hex = "0.4.3"
